# DataScience_Project

./: CNN_50.ipynb  Dockerfile  Instruction.txt  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
DataScience_Project/: main.py  pyproject.toml  requirements.txt
DataScience_Project/src/conf/: messages.py
DataScience_Project/src/repositories/: photos.py
DataScience_Project/src/routers/: users.py
DataScience_Project/src/schemas/: unified.py  users.py
DataScience_Project/src/templates/: all_images.html
src/conf/: messages.py
src/models/: photos.py  users.py
src/neural_network/: Model_training.ipynb  ResNet50.ipynb
src/repositories/: photos.py  users.py
src/routers/: photos.py  users.py
src/schemas/: photos.py  unified.py  users.py
src/services/: auth.py  cloudinary.py  email.py  photos.py  roles.py
src/services/templates/: new_password.html  request_password_reset.html  verify_email.html
src/templates/: all_images.html  image.html  index.html  success.html
