[tool.poetry]
name = "Neoro_Titans"
version = "0.1.0"
description = "Image clasification"
authors = ["Neuro Titans"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.2"
fastapi = "^0.68.0"
jupyter = ">=1.0.0"
uvicorn = "^0.15.0"
djangorestframework = "^3.12.4"
psycopg2-binary = "^2.9.1"
pydantic = "^1.8.2"
tensorflow = "^2.5.0"
numpy = "^1.21.0"
pillow = "^8.2.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"